follow ide advices about url